--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,9 @@
 {
     "name": "Symfony Banking Project",
-    "image": "mcr.microsoft.com/devcontainers/php:1-8.3-bookworm",
+    "build": {
+        "dockerfile": "Dockerfile",
+        "context": "."
+    },
     
     "features": {
         "ghcr.io/devcontainers/features/node:1": {
